--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
 h1 {
 	font-family: Titulo;
 	font-size: 40px;
-	color: #603A03;
+	color: #3CB371;
 }
 
 body {
@@ -234,7 +234,7 @@ body {
 h2 {
 	font-family: Titulo;
 	font-size: 20px;
-	color: #FFF;
+	color: #3CB371;
 }
 
 #energia {
@@ -248,7 +248,7 @@ h2 {
 h3 {
 	font-family: Titulo;
 	font-size: 20px;
-	color: #603A03;
+	color: #3CB371;
 }
 
 #fim {
